Made the location widget displayed on articles thinner and sleeker and made CSS changes to ensure that the maximum width of image uploaded by Tinymce editor is 850 px so that location widget does not overlap with the images of considerably greater width thereby fixing issue #31

--- a/pari/static/css/tinymce.css
+++ b/pari/static/css/tinymce.css
@@ -1,6 +1,7 @@
 
 img {
     margin: 10px;
+    max-width: 850px;
 }
 
 .image-container {
